suuuuuper loose structure for nav

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
-    <title>Names</title>
+    <link rel="stylesheet" href="css/main.css" />
+    <title>African Elephant Database</title>
   </head>
   <body>
     <div id="react-root"></div>
