--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" href="css/main.css" />
     <title>African Elephant Database</title>
+    <script src="https://use.typekit.net/qht8hov.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
   </head>
   <body>
     <div id="react-root"></div>
