Production Build and Preview Server
#5

--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <link rel="stylesheet" href="/css/main.css" />
     <title>African Elephant Database</title>
+    <link rel="stylesheet" href="/assets/css/main.css" />
     <script src="https://use.typekit.net/qht8hov.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
   </head>
