change resources wording

--- a/source/data/about/partners-resources.html
+++ b/source/data/about/partners-resources.html
@@ -1,5 +1,5 @@
 <div class="partners-resources">
-  <h2>Thanks for Our Partners</h2>
+  <h2>Thanks to Our Partners</h2>
   <p>
   	ElephantDatabase.org would not have been possible without our great donors:
   </p>
