--- a/source/data/about/reports.html
+++ b/source/data/about/reports.html
@@ -2,78 +2,88 @@
   <h2>Reports</h2>
   <ul class="reports__list">
   	<li class="reports__list__item">
-  		<a href="/2013">
+  		<a class="report__image" href="/2013">
   			<img src="/images/report-2013.png" />
   		</a>
-      <h4>
-        <a href="/2013">
-          Provisional African Elephant Population Estimates: update to 31 Dec 2013
-        </a>
-      </h4>
-      <p>
-        IUCN African Elephant Specialist Group
-      </p>
+      <span class="reports__details">
+        <h4>
+          <a href="/2013">
+            Provisional African Elephant Population Estimates: update to 31 Dec 2013
+          </a>
+        </h4>
+        <p>
+          IUCN African Elephant Specialist Group
+        </p>
+      </span>
   	</li>
     <li class="reports__list__item">
-      <a href="https://portals.iucn.org/library/efiles/documents/SSC-OP-033.pdf">
+      <a class="report__image" href="https://portals.iucn.org/library/efiles/documents/SSC-OP-033.pdf">
         <img src="/images/report-2007.png" />
       </a>
-      <h4>
-        <a href="https://portals.iucn.org/library/efiles/documents/SSC-OP-033.pdf">
-          2007 African Elephant Status Report (PDF)
-        </a>
-      </h4>
-      <p>
-        J.J. Blanc, R.F.W. Barnes, G.C. Craig, H.T. Dublin, C.R. Thouless, I. Douglas-Hamilton, and J.A. Hart
-      </p>
-      <p>
-        Explore the <a href="http://www.elephantdatabase.org/report/2007" target="_blank">errata</a> or <a href="http://www.elephantdatabase.org/report/references" target="_blank">bibiliography</a>.
-      </p>
+      <span class="reports__details">
+        <h4>
+          <a href="https://portals.iucn.org/library/efiles/documents/SSC-OP-033.pdf">
+            2007 African Elephant Status Report (PDF)
+          </a>
+        </h4>
+        <p>
+          J.J. Blanc, R.F.W. Barnes, G.C. Craig, H.T. Dublin, C.R. Thouless, I. Douglas-Hamilton, and J.A. Hart
+        </p>
+        <p>
+          Explore the <a href="http://www.elephantdatabase.org/report/2007" target="_blank">errata</a> or <a href="http://www.elephantdatabase.org/report/references" target="_blank">bibiliography</a>.
+        </p>
+      </span>
     </li>
     <li class="reports__list__item">
-      <a href="https://portals.iucn.org/library/efiles/documents/SSC-OP-029.pdf">
+      <a class="report__image" href="https://portals.iucn.org/library/efiles/documents/SSC-OP-029.pdf">
         <img src="/images/report-2002.png" />
       </a>
-      <h4>
-        <a href="https://portals.iucn.org/library/efiles/documents/SSC-OP-029.pdf">
-          2002 African Elephant Status Report (PDF)
-        </a>
-      </h4>
-      <p>
-        J.J. Blanc, C.R. Thouless, J.A. Hart, H.T. Dublin, I. Douglas-Hamilton, G.C. Craig and R.F.W. Barnes
-      </p>
-      <p>
-        Explore the <a href="http://www.elephantdatabase.org/report/2002" target="_blank">errata</a>.
-      </p>
+      <span class="reports__details">
+        <h4>
+          <a href="https://portals.iucn.org/library/efiles/documents/SSC-OP-029.pdf">
+            2002 African Elephant Status Report (PDF)
+          </a>
+        </h4>
+        <p>
+          J.J. Blanc, C.R. Thouless, J.A. Hart, H.T. Dublin, I. Douglas-Hamilton, G.C. Craig and R.F.W. Barnes
+        </p>
+        <p>
+          Explore the <a href="http://www.elephantdatabase.org/report/2002" target="_blank">errata</a>.
+        </p>
+      </span>
     </li>
     <li class="reports__list__item">
-      <a href="https://portals.iucn.org/library/efiles/documents/SSC-OP-022.pdf">
+      <a class="report__image" href="https://portals.iucn.org/library/efiles/documents/SSC-OP-022.pdf">
         <img src="/images/report-1998.png" />
       </a>
-      <h4>
-        <a href="https://portals.iucn.org/library/efiles/documents/SSC-OP-022.pdf">
-          1998 African Elephant Status Report (PDF)
-        </a>
-      </h4>
-      <p>
-        R.F.W. Barnes, G.C. Craig, H.T. Dublin, G. Overton, W. Simons and C.R. Thouless
-      </p>
+      <span class="reports__details">
+        <h4>
+          <a href="https://portals.iucn.org/library/efiles/documents/SSC-OP-022.pdf">
+            1998 African Elephant Status Report (PDF)
+          </a>
+        </h4>
+        <p>
+          R.F.W. Barnes, G.C. Craig, H.T. Dublin, G. Overton, W. Simons and C.R. Thouless
+        </p>
+      </span>
     </li>
     <li class="reports__list__item">
-      <a href="https://portals.iucn.org/library/efiles/documents/SSC-OP-011.pdf">
+      <a class="report__image" href="https://portals.iucn.org/library/efiles/documents/SSC-OP-011.pdf">
         <img src="/images/report-1995.png" />
       </a>
-      <h4>
-        <a href="https://portals.iucn.org/library/efiles/documents/SSC-OP-011.pdf">
-          1995 African Elephant Status Report (PDF)
-        </a>
-      </h4>
-      <p>
-        M.Y. Said, R.N. Chunge, G.C. Craig, C.R. Thouless, R.F.W. Barnes and H.T. Dublin
-      </p>
-      <p>
-        Explore the <a href="http://www.elephantdatabase.org/report/1995" target="_blank">errata</a>.
-      </p>
+      <span class="reports__details">
+        <h4>
+          <a href="https://portals.iucn.org/library/efiles/documents/SSC-OP-011.pdf">
+            1995 African Elephant Status Report (PDF)
+          </a>
+        </h4>
+        <p>
+          M.Y. Said, R.N. Chunge, G.C. Craig, C.R. Thouless, R.F.W. Barnes and H.T. Dublin
+        </p>
+        <p>
+          Explore the <a href="http://www.elephantdatabase.org/report/1995" target="_blank">errata</a>.
+        </p>
+      </span>
     </li>
   </ul>
 </div>
