--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>African Elephant Database</title>
+    <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16">
     <link rel="stylesheet" href="/assets/css/main.css" />
     <script src="https://use.typekit.net/qht8hov.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
