--- a/source/data/glossary/survey-categories.html
+++ b/source/data/glossary/survey-categories.html
@@ -7,9 +7,222 @@
   </div>
   <div class="glossary-content__section__inner">
     <ul class="glossary-toggle-list">
-      <li class="glossary-toggle-list__item">
-        
+
+      <li class="glossary-toggle-list__item closed">
+        <div class="glossary-toggle-list__item__header">
+          <div class="glossary-toggle-list__item__header__abbrv">
+            AC
+          </div>
+          <div class="glossary-toggle-list__item__header__title">
+            Aerial Count, not specified
+          </div>
+        </div>
+        <div class="glossary-toggle-list__item__text">
+        </div>
       </li>
+
+      <li class="glossary-toggle-list__item open">
+        <div class="glossary-toggle-list__item__header">
+          <div class="glossary-toggle-list__item__header__abbrv">
+            AS
+          </div>
+          <div class="glossary-toggle-list__item__header__title">
+            Aerial Sample Count
+          </div>
+        </div>
+        <div class="glossary-toggle-list__item__text">
+          <p>
+            AS are categorized using sampling intensity. In stratified aerial sample counts, effective sample intensity, defined as the proportion of animals actually seen to the population estimate, is used instead. In both cases, the following quality categories are based on percentage sampling intensity:
+          </p>
+          <ul>
+            <li>1. Greater than 20%</li>
+            <li>2. 5% to 20%</li>
+            <li>3. Less than 5% or not reported</li>
+          </ul>
+        </div>
+      </li>
+
+      <li class="glossary-toggle-list__item open">
+        <div class="glossary-toggle-list__item__header">
+          <div class="glossary-toggle-list__item__header__abbrv">
+            AT
+          </div>
+          <div class="glossary-toggle-list__item__header__title">
+            Aerial Sample Count
+          </div>
+        </div>
+        <div class="glossary-toggle-list__item__text">
+          <p>
+            AT are categorized in terms of search rate , or the area covered per hour, as follows:
+          </p>
+          <ul>
+            <li>1. Less than 100 km./hr</li>
+            <li>2. 100 - 200 km./hr</li>
+            <li>3. More than 200 km./hr or not reported</li>
+          </ul>
+        </div>
+      </li>
+
+      <li class="glossary-toggle-list__item open">
+        <div class="glossary-toggle-list__item__header">
+          <div class="glossary-toggle-list__item__header__abbrv">
+            DC
+          </div>
+          <div class="glossary-toggle-list__item__header__title">
+            Dung Count
+          </div>
+        </div>
+        <div class="glossary-toggle-list__item__text">
+          <p>
+            1.Percentage Relative Precision (PRP)1  for mean elephant density less than 30% and one of the following:
+          </p>
+          <ul>
+            <li>a. Dung decay rate measured on site for 50 dung-piles or more</li>
+            <li>b. Defecation rate measured on site</li>
+            <li>c. PRP for dung density estimate<sup>1</sup> 20%</li>
+            <li>d. Sampling done in both dry and wet seasons</li>
+          </ul>
+          <p>
+            OR any three of the above four conditions in (a)-(d).
+          </p>
+          <p>
+            2. PRP for elephant density of 50% or less<br />
+            OR any two of the following three conditions:
+          </p>
+          <ul>
+            <li>a. Decay rate measured on site for 30 dung-piles or more</li>
+            <li>b. Defecation rate measured on site</li>
+          </ul>
+          <p>
+            <small>
+              <sup>1</sup> is the 95% confidence limit expressed as a percentage of the estimate. Thus an estimate of 30 with confidence limits of ±15 has a PRP of 50%
+            </small>
+          </p>
+        </div>
+      </li>
+
+      <li class="glossary-toggle-list__item closed">
+        <div class="glossary-toggle-list__item__header">
+          <div class="glossary-toggle-list__item__header__abbrv">
+            EX
+          </div>
+          <div class="glossary-toggle-list__item__header__title">
+            Extrapolation from GIS
+          </div>
+        </div>
+        <div class="glossary-toggle-list__item__text">
+        </div>
+      </li>
+
+      <li class="glossary-toggle-list__item closed">
+        <div class="glossary-toggle-list__item__header">
+          <div class="glossary-toggle-list__item__header__abbrv">
+            GD
+          </div>
+          <div class="glossary-toggle-list__item__header__title">
+            Genetic Dung Count
+          </div>
+        </div>
+        <div class="glossary-toggle-list__item__text">
+          <p>
+            Effective sampling intensity, defined as the number of unique genotypes identified expressed 
+            as a percentage of the estimate, is used as the measure of quality for genetic dung counts, as follows:
+          </p>
+          <ul>
+            <li>1. Greater than 40%</li>
+            <li>2. 20% to 40%</li>
+            <li>3. Less than 20% or not reported.</li>
+          </ul>
+        </div>
+      </li>
+
+      <li class="glossary-toggle-list__item closed">
+        <div class="glossary-toggle-list__item__header">
+          <div class="glossary-toggle-list__item__header__abbrv">
+            GS
+          </div>
+          <div class="glossary-toggle-list__item__header__title">
+            Ground Sample Count
+          </div>
+        </div>
+        <div class="glossary-toggle-list__item__text">
+          <p>
+            GS are rated according to sampling intensity, or sample fraction, which is defined as the proportion of the input zone covered in the survey. The following quality scores are based
+            on percentage sampling intensity of a given area:
+          </p>
+          <ul>
+            <li>1. Greater than 20%</li>
+            <li>2. 5% to 20%</li>
+            <li>3. Less than 5% or not reported</li>
+          </ul>
+        </div>
+      </li>
+
+      <li class="glossary-toggle-list__item closed">
+        <div class="glossary-toggle-list__item__header">
+          <div class="glossary-toggle-list__item__header__abbrv">
+            GT
+          </div>
+          <div class="glossary-toggle-list__item__header__title">
+            Ground Total Count
+          </div>
+        </div>
+        <div class="glossary-toggle-list__item__text">
+          <p>
+            GT are given a data quality score of 1.
+          </p>
+        </div>
+      </li>
+
+      <li class="glossary-toggle-list__item closed">
+        <div class="glossary-toggle-list__item__header">
+          <div class="glossary-toggle-list__item__header__abbrv">
+            IG
+          </div>
+          <div class="glossary-toggle-list__item__header__title">
+            Informed Guess
+          </div>
+        </div>
+        <div class="glossary-toggle-list__item__text">
+          <p>
+            IG are given a data quality rating of 3.
+          </p>
+        </div>
+      </li>
+
+      <li class="glossary-toggle-list__item closed">
+        <div class="glossary-toggle-list__item__header">
+          <div class="glossary-toggle-list__item__header__abbrv">
+            IR
+          </div>
+          <div class="glossary-toggle-list__item__header__title">
+            Individual Registration
+          </div>
+        </div>
+        <div class="glossary-toggle-list__item__text">
+          <p>
+            IR are given a data quality score of 1. It is worth noting, however, that the categorization of IR studies is currently under review, as many such studies do not always cover entire populations, and hence do not necessarily merit a high quality rating.
+          </p>
+        </div>
+      </li>
+
+      <li class="glossary-toggle-list__item closed">
+        <div class="glossary-toggle-list__item__header">
+          <div class="glossary-toggle-list__item__header__abbrv">
+            OG
+          </div>
+          <div class="glossary-toggle-list__item__header__title">
+            Other Guess
+          </div>
+        </div>
+        <div class="glossary-toggle-list__item__text">
+          <p>
+            OG are given a data quality rating of 3.
+          </p>
+        </div>
+      </li>
+
+
     </ul>
   </div>
 </div>
