--- a/source/data/glossary/survey-reliability.html
+++ b/source/data/glossary/survey-reliability.html
@@ -6,5 +6,161 @@
     Categorization of elephant population estimates according to survey type and contribution of each to the four categories of elephant numbers.
   </div>
   <div class="glossary-content__section__inner">
+    <ul class="survey-reliability__list">
+      <li class="survey-reliability__list__item">
+        <div class="survey-reliability__list__item__letter">
+          A
+        </div>
+        <table style="width:100%;">
+          <thead>
+            <tr>
+              <th>Survey type(s)</th>
+              <th>Categorization of estimates</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <p><strong>INDIVIDUAL REGISTRATIONS (IR)</strong></p>
+                <p><strong>AERIAL TOTAL COUNTS (AT)</strong></p>
+                <p><strong>GROUND TOTAL COUNTS (GT)</strong></p>
+              </td>
+              <td>
+                <p><strong>DEFINITE</strong> = the population estimate.</p>
+                <p><strong>PROBABLE</strong> = none.</p>
+                <p><strong>POSSIBLE</strong> = none.</p>
+                <p><strong>SPECULATIVE</strong> = none.</p>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </li>
+      <li class="survey-reliability__list__item">
+        <div class="survey-reliability__list__item__letter">
+          B
+        </div>
+        <table>
+          <thead>
+            <tr>
+              <th>Survey type(s)</th>
+              <th>Categorization of estimates</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <p>
+                  <strong>AERIAL SAMPLE COUNTS (AS)</strong> or <br/>
+                  <strong>GROUND SAMPLE COUNTS (GS)</strong>  with 95% confidence limits
+                </p>
+                <p>
+                  <strong>DUNG COUNTS (DC)</strong> with 95% confidence limits and an estimate of dung decay rate obtained on site 
+                </p>
+              </td>
+              <td>
+                <p><strong>DEFINITE</strong> = the lower 95% confidence limit of the population estimate (there are at least this number of elephants) or the number actually seen, whichever is greater.</p>
+                <p><strong>PROBABLE</strong> = the difference<sup>a</sup> between the estimate and the lower confidence limit, or between the estimate and the actual number seen or between the estimate and zero, if the lower confidence limit is negative<sup>b</sup>.</p>
+                <p><strong>POSSIBLE</strong> = the difference between the upper confidence limit and the estimate.</p>
+                <p><strong>SPECULATIVE</strong> = none.</p>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </li>
+      <li class="survey-reliability__list__item">
+        <div class="survey-reliability__list__item__letter">
+          C
+        </div>
+        <table>
+          <thead>
+            <tr>
+              <th>Survey type(s)</th>
+              <th>Categorization of estimates</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <p>
+                  <strong>DUNG COUNTS (DC)</strong> with 95% confidence limits but no on-site measurement of dung decay rate
+                </p>
+                <p>
+                  <strong>GENETIC DUNG COUNTS (GD)</strong> 
+                </p>
+              </td>
+              <td>
+                <p><strong>DEFINITE</strong> = none, or the number actually seen, if given<sup>c</sup>.</p>
+                <p><strong>PROBABLE</strong> = the population estimate.</p>
+                <p><strong>POSSIBLE</strong> = the difference between the upper confidence limit and the estimate.</p>
+                <p><strong>SPECULATIVE</strong> = none.</p>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </li>
+      <li class="survey-reliability__list__item">
+        <div class="survey-reliability__list__item__letter">
+          D
+        </div>
+        <table>
+          <thead>
+            <tr>
+              <th>Survey type(s)</th>
+              <th>Categorization of estimates</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <p>
+                  <strong>AERIAL SAMPLE COUNTS (AS)</strong>, <strong>GROUND SAMPLE COUNTS (GS)</strong> and <strong>DUNG COUNTS (DC)</strong> without 95% confidence limits
+                </p>
+                <p>
+                  <strong>INFORMED GUESSES (IG)</strong> 
+                </p>
+              </td>
+              <td>
+                <p><strong>DEFINITE</strong> = the number actually seen, if given.</p>
+                <p><strong>PROBABLE</strong> = none.</p>
+                <p><strong>POSSIBLE</strong> = the population estimate or the lower estimate if a range is given, minus the actual number seen, if given.</p>
+                <p><strong>SPECULATIVE</strong> = the difference between upper and lower estimates, if given.</p>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </li>
+      <li class="survey-reliability__list__item">
+        <div class="survey-reliability__list__item__letter">
+          E
+        </div>
+        <table>
+          <thead>
+            <tr>
+              <th>Survey type(s)</th>
+              <th>Categorization of estimates</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <p>
+                  <strong></strong>
+                </p>
+                <p>
+                  <strong>OTHER GUESSES (OG)</strong> 
+                </p>
+                <p><em>Any of the above survey types in which the estimate is over 10 years old</em></p>
+              </td>
+              <td>
+                <p><strong>DEFINITE</strong> = the number actually seen, if given.</p>
+                <p><strong>PROBABLE</strong> = none.</p>
+                <p><strong>POSSIBLE</strong> = none.</p>
+                <p><strong>SPECULATIVE</strong> = the estimate, or the mean of the upper and lower limit, minus the actual number seen, if given.</p>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </li>
+    </ul>
   </div>
 </div>
