--- a/source/data/glossary/causes-of-change.html
+++ b/source/data/glossary/causes-of-change.html
@@ -7,8 +7,140 @@
   </div>
   <div class="glossary-content__section__inner">
     <ul class="glossary-toggle-list">
-      <li class="glossary-toggle-list__item">
-        
+      <li class="glossary-toggle-list__item open">
+        <div class="glossary-toggle-list__item__header">
+          <div class="glossary-toggle-list__item__header__abbrv">
+            RS
+          </div>
+          <div class="glossary-toggle-list__item__header__title">
+            Repeat Survey
+          </div>
+        </div>
+        <div class="glossary-toggle-list__item__text">
+          <p>
+            Both surveys were conducted using comparable methodologies.
+          </p>
+        </div>
+      </li>
+      <li class="glossary-toggle-list__item open">
+        <div class="glossary-toggle-list__item__header">
+          <div class="glossary-toggle-list__item__header__abbrv">
+            DA
+          </div>
+          <div class="glossary-toggle-list__item__header__title">
+            Different Area
+          </div>
+        </div>
+        <div class="glossary-toggle-list__item__text">
+          <p>
+            Both surveys were conducted using the same methodology, but the extent of the areas covered differ by 10% or more.
+          </p>
+        </div>
+      </li>
+      <li class="glossary-toggle-list__item open">
+        <div class="glossary-toggle-list__item__header">
+          <div class="glossary-toggle-list__item__header__abbrv">
+            DT
+          </div>
+          <div class="glossary-toggle-list__item__header__title">
+            Different Technique
+          </div>
+        </div>
+        <div class="glossary-toggle-list__item__text">
+          <p>
+            The most recent survey uses a different survey methodology, or replaces a guess.
+          </p>
+        </div>
+      </li>
+      <li class="glossary-toggle-list__item open">
+        <div class="glossary-toggle-list__item__header">
+          <div class="glossary-toggle-list__item__header__abbrv">
+            NP
+          </div>
+          <div class="glossary-toggle-list__item__header__title">
+            New Population
+          </div>
+        </div>
+        <div class="glossary-toggle-list__item__text">
+          <p>
+            A new entry into the AED, i.e. no previous survey or guess to compare with.
+          </p>
+        </div>
+      </li>
+      <li class="glossary-toggle-list__item open">
+        <div class="glossary-toggle-list__item__header">
+          <div class="glossary-toggle-list__item__header__abbrv">
+            PL
+          </div>
+          <div class="glossary-toggle-list__item__header__title">
+            Population Lost
+          </div>
+        </div>
+        <div class="glossary-toggle-list__item__text">
+          <p>
+            The population is known to have disappeared from the site, be it through translocation or local extinction.
+          </p>
+        </div>
+      </li>
+      <li class="glossary-toggle-list__item open">
+        <div class="glossary-toggle-list__item__header">
+          <div class="glossary-toggle-list__item__header__abbrv">
+            NG
+          </div>
+          <div class="glossary-toggle-list__item__header__title">
+            New Guess
+          </div>
+        </div>
+        <div class="glossary-toggle-list__item__text">
+          <p>
+            A guess replaces an older guess or a survey estimate that has been downgraded to the category of <strong>OTHER GUESSES</strong> for being more than 10 years old.
+          </p>
+        </div>
+      </li>
+      <li class="glossary-toggle-list__item open">
+        <div class="glossary-toggle-list__item__header">
+          <div class="glossary-toggle-list__item__header__abbrv">
+            NA
+          </div>
+          <div class="glossary-toggle-list__item__header__title">
+            New Analysis
+          </div>
+        </div>
+        <div class="glossary-toggle-list__item__text">
+          <p>
+            Data from previous report has been re-analyzed or re-interpreted in the light of new information other than a new estimate.
+          </p>
+        </div>
+      </li>
+      <li class="glossary-toggle-list__item open">
+        <div class="glossary-toggle-list__item__header">
+          <div class="glossary-toggle-list__item__header__abbrv">
+            DD
+          </div>
+          <div class="glossary-toggle-list__item__header__title">
+            Data Degraded
+          </div>
+        </div>
+        <div class="glossary-toggle-list__item__text">
+          <p>
+            The estimate in the previous report has been downgraded to the category of <strong>OTHER GUESSES</strong> for being more than 10 years old.
+          </p>
+        </div>
+      </li>
+      <li class="glossary-toggle-list__item open">
+        <div class="glossary-toggle-list__item__header">
+          <div class="glossary-toggle-list__item__header__abbrv">
+            —
+          </div>
+          <div class="glossary-toggle-list__item__header__title">
+            No Change
+          </div>
+        </div>
+        <div class="glossary-toggle-list__item__text">
+          <p>
+            The estimate has been retained unchanged from previous report.
+          </p>
+        </div>
       </li>
     </ul>
   </div>
