small styling adjustments on glossary

--- a/source/data/glossary/survey-categories.html
+++ b/source/data/glossary/survey-categories.html
@@ -74,9 +74,9 @@
         </div>
         <div class="glossary-toggle-list__item__text">
           <p>
-            1.Percentage Relative Precision (PRP)1  for mean elephant density less than 30% and one of the following:
+            1. Percentage Relative Precision (PRP)1  for mean elephant density less than 30% and one of the following:
           </p>
-          <ul>
+          <ul class="indented">
             <li>a. Dung decay rate measured on site for 50 dung-piles or more</li>
             <li>b. Defecation rate measured on site</li>
             <li>c. PRP for dung density estimate<sup>1</sup> 20%</li>
@@ -89,7 +89,7 @@
             2. PRP for elephant density of 50% or less<br />
             OR any two of the following three conditions:
           </p>
-          <ul>
+          <ul class="indented">
             <li>a. Decay rate measured on site for 30 dung-piles or more</li>
             <li>b. Defecation rate measured on site</li>
           </ul>
@@ -114,7 +114,7 @@
         </div>
       </li>
 
-      <li class="glossary-toggle-list__item closed">
+      <li class="glossary-toggle-list__item open">
         <div class="glossary-toggle-list__item__header">
           <div class="glossary-toggle-list__item__header__abbrv">
             GD
@@ -136,7 +136,7 @@
         </div>
       </li>
 
-      <li class="glossary-toggle-list__item closed">
+      <li class="glossary-toggle-list__item open">
         <div class="glossary-toggle-list__item__header">
           <div class="glossary-toggle-list__item__header__abbrv">
             GS
@@ -158,7 +158,7 @@
         </div>
       </li>
 
-      <li class="glossary-toggle-list__item closed">
+      <li class="glossary-toggle-list__item open">
         <div class="glossary-toggle-list__item__header">
           <div class="glossary-toggle-list__item__header__abbrv">
             GT
@@ -174,7 +174,7 @@
         </div>
       </li>
 
-      <li class="glossary-toggle-list__item closed">
+      <li class="glossary-toggle-list__item open">
         <div class="glossary-toggle-list__item__header">
           <div class="glossary-toggle-list__item__header__abbrv">
             IG
@@ -190,7 +190,7 @@
         </div>
       </li>
 
-      <li class="glossary-toggle-list__item closed">
+      <li class="glossary-toggle-list__item open">
         <div class="glossary-toggle-list__item__header">
           <div class="glossary-toggle-list__item__header__abbrv">
             IR
@@ -206,7 +206,7 @@
         </div>
       </li>
 
-      <li class="glossary-toggle-list__item closed">
+      <li class="glossary-toggle-list__item open">
         <div class="glossary-toggle-list__item__header">
           <div class="glossary-toggle-list__item__header__abbrv">
             OG
