--- a/source/data/glossary/survey-reliability.html
+++ b/source/data/glossary/survey-reliability.html
@@ -26,10 +26,12 @@
                 <p><strong>GROUND TOTAL COUNTS (GT)</strong></p>
               </td>
               <td>
-                <p><strong>DEFINITE</strong> = the population estimate.</p>
-                <p><strong>PROBABLE</strong> = none.</p>
-                <p><strong>POSSIBLE</strong> = none.</p>
-                <p><strong>SPECULATIVE</strong> = none.</p>
+                <p>
+                  <strong><span class="spaced">DEFINITE</span></strong> = the population estimate.
+                </p>
+                <p><strong><span class="spaced">PROBABLE</span></strong> = none.</p>
+                <p><strong><span class="spaced">POSSIBLE</span></strong> = none.</p>
+                <p><strong><span class="spaced">SPECULATIVE</span></strong> = none.</p>
               </td>
             </tr>
           </tbody>
@@ -58,10 +60,10 @@
                 </p>
               </td>
               <td>
-                <p><strong>DEFINITE</strong> = the lower 95% confidence limit of the population estimate (there are at least this number of elephants) or the number actually seen, whichever is greater.</p>
-                <p><strong>PROBABLE</strong> = the difference<sup>a</sup> between the estimate and the lower confidence limit, or between the estimate and the actual number seen or between the estimate and zero, if the lower confidence limit is negative<sup>b</sup>.</p>
-                <p><strong>POSSIBLE</strong> = the difference between the upper confidence limit and the estimate.</p>
-                <p><strong>SPECULATIVE</strong> = none.</p>
+                <p><strong><span class="spaced">DEFINITE</span></strong> = the lower 95% confidence limit of the population estimate (there are at least this number of elephants) or the number actually seen, whichever is greater.</p>
+                <p><strong><span class="spaced">PROBABLE</span></strong> = the difference<sup>a</sup> between the estimate and the lower confidence limit, or between the estimate and the actual number seen or between the estimate and zero, if the lower confidence limit is negative<sup>b</sup>.</p>
+                <p><strong><span class="spaced">POSSIBLE</span></strong> = the difference between the upper confidence limit and the estimate.</p>
+                <p><strong><span class="spaced">SPECULATIVE</span></strong> = none.</p>
               </td>
             </tr>
           </tbody>
@@ -89,10 +91,10 @@
                 </p>
               </td>
               <td>
-                <p><strong>DEFINITE</strong> = none, or the number actually seen, if given<sup>c</sup>.</p>
-                <p><strong>PROBABLE</strong> = the population estimate.</p>
-                <p><strong>POSSIBLE</strong> = the difference between the upper confidence limit and the estimate.</p>
-                <p><strong>SPECULATIVE</strong> = none.</p>
+                <p><strong><span class="spaced">DEFINITE</span></strong> = none, or the number actually seen, if given<sup>c</sup>.</p>
+                <p><strong><span class="spaced">PROBABLE</span></strong> = the population estimate.</p>
+                <p><strong><span class="spaced">POSSIBLE</span></strong> = the difference between the upper confidence limit and the estimate.</p>
+                <p><strong><span class="spaced">SPECULATIVE</span></strong> = none.</p>
               </td>
             </tr>
           </tbody>
@@ -120,10 +122,10 @@
                 </p>
               </td>
               <td>
-                <p><strong>DEFINITE</strong> = the number actually seen, if given.</p>
-                <p><strong>PROBABLE</strong> = none.</p>
-                <p><strong>POSSIBLE</strong> = the population estimate or the lower estimate if a range is given, minus the actual number seen, if given.</p>
-                <p><strong>SPECULATIVE</strong> = the difference between upper and lower estimates, if given.</p>
+                <p><strong><span class="spaced">DEFINITE</span></strong> = the number actually seen, if given.</p>
+                <p><strong><span class="spaced">PROBABLE</span></strong> = none.</p>
+                <p><strong><span class="spaced">POSSIBLE</span></strong> = the population estimate or the lower estimate if a range is given, minus the actual number seen, if given.</p>
+                <p><strong><span class="spaced">SPECULATIVE</span></strong> = the difference between upper and lower estimates, if given.</p>
               </td>
             </tr>
           </tbody>
@@ -152,10 +154,10 @@
                 <p><em>Any of the above survey types in which the estimate is over 10 years old</em></p>
               </td>
               <td>
-                <p><strong>DEFINITE</strong> = the number actually seen, if given.</p>
-                <p><strong>PROBABLE</strong> = none.</p>
-                <p><strong>POSSIBLE</strong> = none.</p>
-                <p><strong>SPECULATIVE</strong> = the estimate, or the mean of the upper and lower limit, minus the actual number seen, if given.</p>
+                <p><strong><span class="spaced">DEFINITE</span></strong> = the number actually seen, if given.</p>
+                <p><strong><span class="spaced">PROBABLE</span></strong> = none.</p>
+                <p><strong><span class="spaced">POSSIBLE</span></strong> = none.</p>
+                <p><strong><span class="spaced">SPECULATIVE</span></strong> = the estimate, or the mean of the upper and lower limit, minus the actual number seen, if given.</p>
               </td>
             </tr>
           </tbody>
