--- a/source/data/about/partners-resources.html
+++ b/source/data/about/partners-resources.html
@@ -1,7 +1,19 @@
 <div class="partners-resources">
-  <h2>Thanks to Our Partners</h2>
+  <h2>Thanks</h2>
   <p>
-  	ElephantDatabase.org would not have been possible without our great donors:
+    The AfESG and the authors of the African Elephant Status Report 2016 are grateful to our data providers, including AfESG members, range state wildlife agencies, <a href="" target="_blank">Vulcan Inc's Great Elephant Census</a>, NGOs, individual researchers and interested observers around the African continent. The provision of up-to-date information helps to ensure that the most recent available data are included in the African Elephant Database. Particular thanks are due to <a href="http://www.solertium.com/" target="_blank">Solertium</a> for driving the back-end of the database to help deliver the numbers and tables; Refleqt for their efforts on updating the maps, especially the extensive new range changes; and <a href="http://www.flintmade.co/" target="_blank">Flint</a> for the design and delivery of this website and the published and digital versions of the AESR 2016.</p>
+  <p>
+    Lastly, we thank our primary partners, <a href="http://www.vulcan.com/" target="_blank">Vulcan Inc</a> and <a href="http://savetheelephants.org/" target="_blank">Save the Elephants</a>, for their support throughout the further development of the AED and the production of the AESR 2016. 
+    <div class="partners-resources__link-grid">
+    <a class="partners-resources__link-grid__link vulcan" href="http://www.vulcan.com/" target="_blank">
+      Vulcan
+      </a> 
+      <a class="partners-resources__link-grid__link ste" href="http://savetheelephants.org/" target="_blank">
+      Save the Elephants
+      </a> 
+  </p>
+  <p>
+    The revised website and the new status report were made possible by a number of sponsors, including the African Elephant Fund, the African Wildlife Foundation, CITES MIKE, Safari Club International Foundation, Save The Elephants, the United Kingdom Department of Environment, Food and Rural Affairs; the United States Fish & Wildlife Service and WWF.
   </p>
   <div class="partners-resources__link-grid">
   	<a class="partners-resources__link-grid__link aef" href="http://africanelephantfund.org/" target="_blank">
@@ -10,8 +22,8 @@
   	<a class="partners-resources__link-grid__link awf" href="https://www.awf.org/" target="_blank">
       African Wildlife Foundation
     </a>
-  	<a class="partners-resources__link-grid__link ste" href="http://savetheelephants.org/" target="_blank">
-      Save the Elephants
+  	<a class="partners-resources__link-grid__link scif" href="http://safariclubfoundation.org/" target="_blank">
+      Safari Club International Foundation
     </a>
   	<a class="partners-resources__link-grid__link mike" href="https://cites.org/eng/prog/mike" target="_blank">
       Monitoring the Illegal Killing of Elephants
