add more static pages; errata, references, darp

--- a/source/data/about/about-us.html
+++ b/source/data/about/about-us.html
@@ -33,7 +33,7 @@
     Request Data
   </h3>
   <p>
-    To obtain direct data access to African elephant data, please review our <a href="http://www.elephantdatabase.org/about/darp" target="_blank">data access and release policy</a> and complete the data request form online when available.
+    To obtain direct data access to African elephant data, please review our <a href="/darp" target="_blank">data access and release policy</a> and complete the data request form online when available.
   </p>
   <button class="about-content__button button__disabled" href="http://www.elephantdatabase.org/data_request_forms/new" alt="Data Request Form currently disabled">DATA REQUEST FORM</button>
   <h3>
