populations in sidebar, about page updates

--- a/source/data/about/introduction.html
+++ b/source/data/about/introduction.html
@@ -1,16 +1,41 @@
 <div class="introduction">
   <h2>Introduction</h2>
+  <div class="about-us__link-grid">
+    <a 
+      class="about-us__link-grid__link iucn" 
+      href="https://www.iucn.org/" 
+      target="_blank">
+        IUCN
+    </a>
+    <a 
+      class="about-us__link-grid__link ssc" 
+      href="https://www.iucn.org/theme/species/about/species-survival-commission" 
+      target="_blank">
+        SSC
+    </a>
+    <a 
+      class="about-us__link-grid__link afesg" 
+      href="https://www.iucn.org/ssc-specialist-groups/african-elephant-sg/about/ssc-specialist-groups-and-red-list-authorities-10" 
+      target="_blank">
+        AfESG
+    </a>
+  </div>
   <p>
-  	This is an update on the status of the African elephant produced under the aegis of the <a href="http://www.iucn.org/about/work/programmes/species/who_we_are/ssc_specialist_groups_and_red_list_authorities_directory/mammals/african_elephant/" target="_blank">African Elephant Specialist Group (AfESG)</a> of the IUCN Species Survival Commission (SSC). It is based on data from the African Elephant Database (AED), the official database on the conservation status of the African elephant. Since 2009, the AfESG has been working on a major shift in the infrastructure of the AED. The AED is now housed in a ‘global’ elephant database, the African and Asian Elephant Database (AAED), available through a <a href="http://www.elephantdatabase.org/" target="_blank">web interface</a>. At present, <a href="http://www.elephantdatabase.org/maps/asian_range" target="_blank">Asian elephant range</a> is available, and the <a href="http://www.asesg.org/" target="_blank">IUCN/SSC Asian Elephant Specialist Group</a> is working to integrate population data. This is an open source project and the code is available for use and modification by other Specialist Groups or the general public. The new system provides a number of advantages, not least of which is the near immediate publication of survey results as we receive them, rather than waiting for the publication of an updated set of pooled estimates.
+    Welcome to the African Elephant Database (AED), the most comprehensive database on the status of any species of mammal in the wild. The database is maintained by the African Elephant Specialist Group (AfESG), and holds data on elephant numbers and distribution across the 37 countries where African elephants occur. It provides information on changes in elephant numbers and shows where these changes have taken place. The database has been developed over the past 25 years and went online in 2012.
   </p>
   <p>
-  	There has been no change in the system for categorization of different data types. As such the elaboration on <a href="http://www.iucn.org/about/work/programmes/species/who_we_are/ssc_specialist_groups_and_red_list_authorities_directory/mammals/african_elephant/data/reports/?uPubsID=3407" target="_blank">pages 6-19 of the AESR 2007</a> is a useful resource in interpreting the current update. The only change is a slight change in coding for Informed and Other Guesses. Informed guesses are noted as O (data reliability D) and other guesses are noted as O (data reliability E).
+    Conservation and management of elephant populations and their habitats is critical and a goal towards which many individuals, organizations and countries are working. Even if opinions differ as to how best this can be achieved, it is widely agreed that decisions should be informed by the most up-to-date and reliable information available on the status of Africa’s elephants. The AfESG maintains the AED to meet this need and provides comprehensive information for individual countries, regions, and for Africa as a whole. The AED relies on the contributions of countless survey biologists, experts and observers across the continent. 
   </p>
-  <h3>
-  	Acknowledgements
-  </h3>
   <p>
-  	The AfESG is very grateful to all data providers, including AfESG members, range State wildlife agencies, NGOs and individual researchers. The provision of up-to-date data helps to ensure that the most recent available data are included in the database. Particular thanks are due to the Data Review Working Group of the AfESG, Julian Blanc, Colin Craig, Holly Dublin, Chris Thouless, Iain Douglas-Hamilton, John Hart, and Howard Frederick, and reviewers Fiona Maisels and Philippe Bouché. A number of donors and partners have assisted in the development of the AAED, and in the preparation of this update: <a href="http://www.cites.org/" target="_blank">CITES</a>, <a href="http://www.cites.org/eng/prog/mike/index.php" target="_blank">CITES MIKE</a>, <a href="http://www.solertium.com/" target="_blank">Solertium</a>, <a href="http://www.fws.gov/international/wildlife-without-borders/species-programs/" target="_blank">U.S. Fish &amp; Wildlife Service</a>, the <a href="http://ec.europa.eu/environment/cites/home_en.htm" target="_blank">European Commission</a>, <a href="http://www.elephantdatabase.org/preview_report/2013_africa/Loxodonta_africana/2012/www.tusk.org" target="_blank">Tusk Trust</a>, <a href="http://www.savetheelephants.org/" target="_blank">Save the Elephants</a>, <a href="http://wwf.org/" target="_blank">WWF</a>, and <a href="https://www.gov.uk/government/organisations/department-for-environment-food-rural-affairs" target="_blank">DEFRA</a>.
+    To learn more about the way the data is processed, compiled and presented in tables and maps and the methods used for establishing summaries at the national, regional and continental level, visit our <a href="/overview" target="_blank">Overview of the AED Data and Tables</a> section.
   </p>
-
+  <p>
+    This website contains data from surveys that were conducted on or before December 31, 2015, as well as expert opinion for that time. In the interest of making this data available sooner rather than later, the Data Review Working Group of the African Elephant Specialist Group is continuing to conduct a detailed review of these webpages. Though there may be some minor errors and discrepancies, and corrections are listed here, the Data Review Working Group believes the overall continental, sub-regional, and national summaries are reflective of the submitted data.
+  </p>
+  <p>
+    AfricanElephantDatabase.org is an <a href="https://github.com/afesg" target="_blank">open source software project</a>. It was created with <a href="http://www.postgresql.org/" target="_blank">PostgreSQL</a>, <a href="http://postgis.refractions.net/" target="_blank">PostGIS</a>, <a href="http://www.ruby-lang.org/en/" target="_blank">Ruby</a>, and <a href="http://rubyonrails.org/" target="_blank">Ruby on Rails</a>. Every aspect of the database is powered by free and open source software. Data on this web site is made available under a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons Attribution-Non Commercial-Share Alike license</a>.
+  </p>
+  <p>
+    Any questions about the data or its interpretation, as well as comments regarding potential errors are welcome and can be submitted to <a href="mailto:afesg@iucn.org">afesg@iucn.org</a>.
+  </p>
 </div>
