--- a/source/data/about/reports.html
+++ b/source/data/about/reports.html
@@ -1,21 +1,6 @@
 <div class="reports">
-  <h2>Reports</h2>
+  <h2>Reports &amp; Publications</h2>
   <ul class="reports__list">
-  	<li class="reports__list__item">
-  		<a class="report__image" href="/2013">
-  			<img src="/images/report-2013.png" />
-  		</a>
-      <span class="reports__details">
-        <h4>
-          <a href="/2013">
-            Provisional African Elephant Population Estimates: update to 31 Dec 2013
-          </a>
-        </h4>
-        <p>
-          IUCN African Elephant Specialist Group
-        </p>
-      </span>
-  	</li>
     <li class="reports__list__item">
       <a class="report__image" href="https://portals.iucn.org/library/efiles/documents/SSC-OP-033.pdf">
         <img src="/images/report-2007.png" />
