--- a/source/data/glossary/range-categories.html
+++ b/source/data/glossary/range-categories.html
@@ -12,7 +12,7 @@
           KNOWN
         </h4>
         <p class="range-categories__list__item__text">
-          Areas in suitable habitat which, if searched with reasonable intensity, are likely to yield signs of elephant presence. If no information is obtained confirming the presence of elephants for a 10 year period, KNOWN range is downgraded to POSSIBLE range.
+          Areas in suitable habitat, which, if searched with reasonable intensity, are likely to yield signs of elephant presence. If no information is obtained confirming presence of elephants for a 10-year period, known range is downgraded to possible range (below).
         </p>
       </li>
       <li class="range-categories__list__item">
@@ -20,7 +20,7 @@
           POSSIBLE
         </h4>
         <p class="range-categories__list__item__text">
-          Areas within historical range and in suitable habitat where there are no negative data to rule out the presence of elephants, including former areas of KNOWN range where the source information is more than 10 years old. Areas of POSSIBLE range are considered to be a priority for studies to establish the presence or absence of elephants.
+          Areas within previous elephant range, including former areas of known range where the source information is more than 10 years old where there is no confirmation that elephants still occur, but no evidence that they have been lost. Areas of possible range are considered to be a priority for studies to establish the presence or absence of elephants.
         </p>
       </li>
       <li class="range-categories__list__item">
@@ -28,7 +28,7 @@
           DOUBTFUL
         </h4>
         <p class="range-categories__list__item__text">
-          Areas where there are reasons to believe that elephants are no longer present, but which have not been formally surveyed. If further corroborative evidence is obtained, areas of DOUBTFUL range are reclassified as NON-RANGE. As with POSSIBLE range, areas of DOUBTFUL range are a priority for absence/ presence studies.
+          Areas where there are reasons to believe that elephants are no longer present, but for which there is no recent positive or negative information. Areas of DOUBTFUL range are also a priority for presence/absence studies.
         </p>
       </li>
       <li class="range-categories__list__item">
@@ -36,7 +36,7 @@
           NON-RANGE
         </h4>
         <p class="range-categories__list__item__text">
-          Areas which are known to hold no elephants ­— be it due to habitat modification, local extinction or any other reason.
+          Areas that are believed to hold no elephants. A change to non-range ideally requires a clear statement from a knowledgeable person who has actually visited the area, though sometimes range is classified this way as a result of known habitat transformation or high human population densities.
         </p>
       </li>
       <li class="range-categories__list__item">
@@ -44,7 +44,7 @@
           POINT RECORDS
         </h4>
         <p class="range-categories__list__item__text">
-          Sightings of elephants or evidence of their presence outside of KNOWN elephant range, shown as crosses on the maps.
+          Sightings of elephants or evidence of their occasional presence outside of known elephant range, shown as crosses on the map.
         </p>
       </li>
     </ul>
