survey reliability update on glossary

--- a/source/data/glossary/survey-reliability.html
+++ b/source/data/glossary/survey-reliability.html
@@ -1,3 +1,7 @@
+<h3 class="glossary-content__section__title">
+  Survey Reliabilty
+</h3>
+
 <div class="glossary-content__section__content">
   <p>
     The AED incorporates a system to accommodate all types of numbers by classifying them according to their type and designating them as estimates and guesses. The new ADD system uses a scale of survey reliability, ranging from A (highest) to E (lowest). Survey reliability gives an indication of the level of certainty that can be placed on a given number, as determined by the method employed and how it was carried out. 
